<resources>
    <string name="app_name">TaskList</string>
    <string name="action_settings">Settings</string>

    <string name="edit_item_delete">Delete</string>
    <string name="edit_item_save">Save</string>
    <string name="edit_item_cancel">Cancel</string>
    <string name="edit_item_name_hint">Item Name</string>
    <string name="edit_item_description_hint">Item Description</string>
    <string name="edit_item_quantity">Quantity:</string>
    <string name="edit_item_quantity_short">Qty:</string>
    <string name="edit_item_quantity_default">1</string>
    <string name="edit_item_error_name_empty">Please enter item name</string>
    <string name="edit_item_error_quantity_empty">Quantity not valid</string>

    <string name="sample_item_name">Sample Item</string>
    <string name="sample_item_description">This sample item is checked off by default and can be deleted
        in the item detail screen.\n\nNew items can be added with the \'+\' button.</string>
    <string name="sample_item_quantity">9999</string>
</resources>
